Revert "Revert "Update index.html""
This reverts commit ed57feafb9423a33563c16d0603ceaaf9c0f3b5f.

--- a/index.html
+++ b/index.html
@@ -524,7 +524,6 @@
 				}
 				var curveless = offsetpath(pts, 0);
 				var c = 0;
-				//alert(JSON.stringify(curveless[0]));
 				for (var i = 0; i < curveless.length; i++) {
 					var pt = curveless[i];
 					if (pt.type == 'checkpoint') {
@@ -1257,7 +1256,7 @@
 				} else if (e.which === 77) {
 					selectedpt.type = 'midpoint';
 				} else if (e.which === 84) {
-					var p = Number(prompt('thickness'));
+					var p = Number(prompt('thickness (currently: ' + pts[0].thickness + ')'));
 					if (p == null || p < 1) {
 						return;
 					}
@@ -1287,7 +1286,7 @@
 					}
 					tuttext[3] = p;
 				} else if (e.which === 70) {
-					var p = Number(prompt('fuse speed'));
+					var p = Number(prompt('fuse speed (currently: ' + state.lvledit.lvleditdata.fusespeed + ')'));
 					if (p == null || p < 0) {
 						return;
 					}
